BPMSHub new website

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; url=http://example.com/" /> 
+    <meta http-equiv="refresh" content="0; url=https://www.bpmshub.net/" /> 
 </html>
