--- a/index.html
+++ b/index.html
@@ -1,5 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="refresh" content="0; url=https://www.bpmshub.net/" /> 
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="The better unblocked games website." />
+    <meta name="keywords" content="front-end web developer, unblocked, games, google sites, unblocked games mom, ublocked, code, coding, programmer, development, javascript, jquery, bootstrap, sass, less, git" />
+    <meta name="author" content="BpmsHub" />
+    <meta content="BpmsHub" property="og:title" />
+    <meta content="The better unblocked games website." property="og:description" />
+    <meta content="/images/logo.png" property="og:image" />
+
+    <title>BpmsHub</title>
+    <link href="./images/logo.png" rel="icon" />
+    <link href="./css/index.css" rel="stylesheet" />
+    <link rel="manifest" href="/manifest.json" />
+    <script src="./assets/webrtc-ip.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/keen-slider@6.8.5/keen-slider.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <script src="/js/main.js"></script>
+  </head>
+  <body>
+    <div class="navbar">
+      <div class="navitems">
+        <img onclick="location.href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'" src="./images/logo.png" class="navlogo" draggable="false" />
+        <a href="/"><div class="navitem" current>Home</div></a>
+        <a href="/projects"><div class="navitem">Projects</div></a>
+        <a href="/extras"><div class="navitem">Extras</div></a>
+        <a href="/blog"><div class="navitem">Blog</div></a>
+        <a href="/settings"><div class="navitem">Settings</div></a>
+        <a href="/about"><div class="navitem">About</div></a>
+      </div>
+    </div>
+
+    <div class="title">BpmsHub</div>
+    <center>
+      <div class="message homemessage" onclick="setRandomSay()">...</div>
+      <p class="section-text"><a href="blog/v4release">Welcome to BpmsHub v1!</a></p>
+      <br />
+      <a href="/projects" class="play-link" data-aos="fade-up"><button class="play">Play Now</button></a>
+    </center>
+
+    <a href="#reviews"><button class="reviews-link">Reviews</button></a>
+
+    <div id="reviews"></div>
+
+    <div id="my-keen-slider" class="keen-slider"></div>
+    
+    <footer>© BpmsHub 2023</footer>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+    <script src="./assets/keen-slider.min.js"></script>
+    <script src="./js/reviews.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./js/home.js"></script>
+  </body>
 </html>
